created first page classes, config.properties and testconfig class

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,15 @@
 base.url=https://parabank.parasoft.com/parabank/index.htm
 
-username=john
+
+name=John
+lastname=Doe
+address=123 Main St
+city=Anytown
+state=CA
+zipCode=12345
+phone=555-1234
+ssn=123-45-6789
+username=john123
 password=demo
 
 headless=false
