--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,16 +1,3 @@
 base.url=https://parabank.parasoft.com/parabank/index.htm
-
-
-name=John
-lastname=Doe
-address=123 Main St
-city=Anytown
-state=CA
-zipCode=12345
-phone=555-1234
-ssn=123-45-6789
-username=john123
-password=demo
-
-headless=false
+headless=true
 browser=chromium
