--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,4 @@
-base.url=https://parabank.parasoft.com/parabank/index.htm
-headless=true
+#base.url=https://parabank.parasoft.com/parabank/index.htm
+base.url=http://localhost:8080/parabank
+headless=false
 browser=chromium
