--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,3 @@
-#base.url=https://parabank.parasoft.com/parabank/index.htm
 base.url=http://localhost:8080/parabank
-headless=false
-browser=chromium
+api.base.url=http://localhost:8080/parabank/services/bank/
+headless=true
