Create FE available funds loan test

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,4 @@
 base.url=http://localhost:8080/parabank
 api.base.url=http://localhost:8080/parabank/services/bank/
 headless=false
+initial.balance=10000
